# septa-mcp-python

./: .gitignore  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
septa_mcp/: __init__.py  config.py  http_client.py  logging_config.py  registration.py  server.py
septa_mcp/domain/: __init__.py  cache.py  normalization.py
septa_mcp/tools/: __init__.py  alerts_basic.py  alerts_messages.py  arrivals.py  bus_detours.py  bus_schedule.py  elevator_outages.py  gtfs_feeds.py  http.py  locations.py  next_to_arrive.py  rr_schedule.py  sms_schedule.py  stops.py  train_view.py  transit_view.py  transit_view_all.py
